--- a/app/components/layout/header/menu/Menu.module.css
+++ b/app/components/layout/header/menu/Menu.module.css
@@ -1,3 +1,24 @@
 .menu {
-	@apply flex items-center gap-4;
+	@apply flex items-center gap-10;
+}
+
+.menu nav ul {
+	@apply list-none flex items-center gap-6;
+}
+
+.menu nav ul li {
+	@apply inline-block;
+}
+
+.menu nav ul li a {
+	@apply no-underline text-black tracking-widest relative;
+}
+
+.menu nav ul li a::after {
+	content: '';
+	@apply w-0 absolute left-0 -bottom-3 h-0.5 bg-black transition-all duration-300;
+}
+
+.menu nav ul li a:hover::after {
+	@apply w-full;
 }
