--- a/app/components/ui/catalog/carousel/carousel-item/CarouselItem.module.css
+++ b/app/components/ui/catalog/carousel/carousel-item/CarouselItem.module.css
@@ -1,12 +1,8 @@
 .item {
-	@apply rounded-3xl bg-light-green p-6 pt-0 mb-5;
+	@apply rounded-3xl bg-light-green p-6 pt-0 mb-5 cursor-pointer;
 }
 
 .active {
-}
-
-.image {
-	@apply -mt-16;
 }
 
 .name {
