--- a/app/components/ui/catalog/carousel/carousel-item/CarouseNav/CarouselNav.module.css
+++ b/app/components/ui/catalog/carousel/carousel-item/CarouseNav/CarouselNav.module.css
@@ -7,9 +7,9 @@
 }
 
 .arrow_left {
-	@apply absolute top-10 -left-4 text-white;
+	@apply animate-opacity absolute top-10 -left-4 text-white;
 }
 
 .arrow_right {
-	@apply absolute top-10 -right-4 text-white;
+	@apply animate-opacity absolute top-10 -right-4 text-white;
 }
